--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
    
         <span>H</span>
         <span>A</span>
-        <span>I</span>
-        <span>-</span>
-        <span>H</span>
+        <span>L</span>
+        <span>L</span>
+        <span>O</span>
+        <span>S</span>
+        <span>A</span
+        <span>Y</span>
         <span>A</span>
-        <span>I</span><br>
-        <span>I</span>
-        <span>I</span>
         <span>N</span>
+        <span>G</span>
     </div>
     <div class="description">
         <span>apa ya kita mau ngapain, dengerin lagunya coba diliat deh yaa</span>
