--- a/index.html
+++ b/index.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <title>Flowers</title>
-   
 </head>
 <body>
-    <div class="greetings">
-   
-        <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
-        <span>S</span>
-        <span>A</span
-        <span>Y</span>
-        <span>A</span>
-        <span>N</span>
-        <span>G</span>
-    </div>
-    <div class="description">
-        <span>apa ya kita mau ngapain, dengerin lagunya coba diliat deh yaa</span>
-    </div>
-    <div class="button">
-        <button>
-            <audio controls src="audio.mp3" type="audio/mp3"></audio>
-        </button><br>
-
-        <button>
-            <label>
-            <a href="flower.html">udah selesai dengernya coba dipencet </a>
-
-            </label>
-       
-        </button>
-        
+    <div class="container">
+        <div class="greetings">
+            <span>H</span>
+            <span>A</span>
+            <span>L</span>
+            <span>L</span>
+            <span>O</span>
+            <span>S</span>
+            <span>A</span>
+            <span>Y</span>
+            <span>A</span>
+            <span>N</span>
+            <span>G</span>
+        </div>
+        <div class="description">
+            <p>Apa ya kita mau ngapain, dengerin lagunya coba diliat deh yaa</p>
+        </div>
+        <div class="buttons">
+            <button>
+                <audio controls src="audio.mp3" type="audio/mp3"></audio>
+            </button>
+            <br>
+            <button>
+                <a href="flower.html">Udah selesai dengernya coba dipencet</a>
+            </button>
+        </div>
     </div>
 </body>
 </html>
